# HidayetRadiolari

./: .gitignore  .windsurfrules  MyComments.md  README.md  RadioListesi.md  activate_venv.sh  buildozer.spec  local.properties  main.py  main1.py  main2.py  pyproject.toml  requirements.txt  settings.gradle.kts  setup.py  setup_env.sh  setup_gstreamer.sh  setup_project_envs.sh
ZeDio-Python-master/FixedLayout/: main.py  radios-list.md
ZeDio-Python-master/PyQT-GUI/: requirements.txt
app/: build.gradle.kts
app/src/androidTest/java/com/orr/hidayetradiolari/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/orr/hidayetradiolari/: ExampleUnitTest.kt
examples/: README.md
gradle/wrapper/: gradle-wrapper.properties
